# lambda_calculus

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check-and-lint.yml  test.yml
benches/: church_list.rs  church_lists.rs  church_numerals.rs  church_option.rs  list.rs  lists.rs  num.rs  numerals.rs  option.rs  pair_list.rs  parigot_numerals.rs  parsing.rs  scott_numerals.rs  stumpfu_numerals.rs  term.rs
src/: arithmetic.rs  booleans.rs  combinators.rs  display.rs  lib.rs  list.rs  pair.rs  parser.rs  reduction.rs  term.rs
src/church/: boolean.rs  booleans.rs  convert.rs  list.rs  lists.rs  mod.rs  numerals.rs  option.rs  pair.rs  pairs.rs
src/data/: boolean.rs  list.rs  mod.rs  option.rs  pair.rs  result.rs  tuple.rs
src/data/list/: church.rs  convert.rs  mod.rs  pair.rs  parigot.rs  scott.rs
src/data/num/: binary.rs  church.rs  convert.rs  mod.rs  parigot.rs  scott.rs  signed.rs  stumpfu.rs
src/data/numerals/: binary.rs  church.rs  convert.rs  mod.rs  parigot.rs  scott.rs  stumpfu.rs
src/data/signed/: church.rs  mod.rs
src/parigot/: convert.rs  mod.rs  numerals.rs
src/scott/: convert.rs  mod.rs  numerals.rs
src/stumpfu/: convert.rs  mod.rs  numerals.rs
tests/: church_list.rs  church_lists.rs  church_numerals.rs  church_option.rs  list.rs  lists.rs  num.rs  numerals.rs  option.rs  pair_list.rs  parigot_numerals.rs  parse_error.rs  parser.rs  reduction.rs  scott_numerals.rs  signed.rs  stumpfu_numerals.rs  term_error.rs
