[package]
name = "lambda_calculus"
version = "3.2.0"
description = "A simple, zero-dependency implementation of pure lambda calculus in Safe Rust"
repository = "https://github.com/ljedrz/lambda_calculus"
documentation = "https://docs.rs/lambda_calculus"
readme = "README.md"
license = "CC0-1.0"
keywords = ["lambda", "calculus", "functional", "mathematics", "combinators"]
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = ["encoding"]
backslash_lambda = []
encoding = []

